--- a/styles/modules.css
+++ b/styles/modules.css
@@ -1,4 +1,62 @@
 .navbar {
   margin-bottom: 0;
+}
+
+#user-form-container {
+  position: absolute;
+  top: 35%;
+  left: 0;
+  right: 0;
+  margin: 0 1em;
+  /*padding: 0 20em;*/
   z-index: 2;
+}
+
+#user-form-container .btn {
+  width: 100%;
+}
+
+#user-form-container #user-location {
+  width: 100%;
+}
+
+#user-form-container #activity-picker {
+  width: 100%;
+}
+
+@media only screen and (min-width: 500px) and (max-width : 767px) {
+  /*#user-form-container {
+    margin: 0 8em;
+  }*/
+}
+
+@media only screen and (min-width: 768px) and (max-width : 991px) {
+  #user-form-container {
+    margin: 0 12em;
+    top: 40%;
+  }
+
+  #user-form-container #user-location-container {
+    width: 50%;
+  }
+
+  #user-form-container #activity-picker-container {
+    width: 30%;
+  }
+
+}
+
+@media only screen and (min-width: 992px) {
+  #user-form-container {
+    margin: 0 20em;
+    top: 40%;
+  }
+  #user-form-container #user-location-container {
+    width: 50%;
+  }
+
+  #user-form-container #activity-picker-container {
+    width: 30%;
+  }
+
 }
