added another pic.

--- a/styles/modules.css
+++ b/styles/modules.css
@@ -25,7 +25,7 @@
 }
 
 .john-photo {
-  background-image: url('');
+  background-image: url('/img/Jp_Gaines.jpg');
   background-position: center;
   background-size: cover;
 }
