--- a/styles/modules.css
+++ b/styles/modules.css
@@ -3,7 +3,21 @@
 }
 
 .navbar-brand {
-  padding: 0px;
+  padding: 0 0.5em;
+}
+
+#toggle-panel {
+   position: absolute;
+   top: 10px;
+   right: 10em;
+   z-index: 5;
+   background-color: #f5c;
+   padding: 5px;
+   border: 1px solid #999;
+   text-align: center;
+   font-family: 'Roboto','sans-serif';
+   line-height: 30px;
+   padding-left: 10px;
 }
 
 #user-form-container {
@@ -31,6 +45,10 @@
   width: 100%;
 }
 
+#user-form-button {
+  width: 100%;
+}
+
 @media only screen and (min-width: 500px) and (max-width : 767px) {
   /*#user-form-container {
     margin: 0 8em;
@@ -51,6 +69,9 @@
     width: 30%;
   }
 
+  .navbar #user-form {
+    padding: 0.5em 7em;
+  }
 }
 
 @media only screen and (min-width: 992px) and (max-width : 1450px) {
@@ -66,6 +87,10 @@
     width: 30%;
   }
 
+  .navbar #user-form {
+    padding: 0.5em 7em;
+  }
+
 }
 
 @media only screen and (min-width: 1451px) {
@@ -79,6 +104,10 @@
 
   #user-form-container #activity-picker-container {
     width: 30%;
+  }
+
+  .navbar #user-form {
+    padding: 0.5em 7em;
   }
 
 }
