--- a/styles/modules.css
+++ b/styles/modules.css
@@ -6,20 +6,6 @@
   padding: 0 0.5em;
 }
 
-#toggle-panel {
-   position: absolute;
-   top: 10px;
-   right: 10em;
-   z-index: 5;
-   background-color: #f5c;
-   padding: 5px;
-   border: 1px solid #999;
-   text-align: center;
-   font-family: 'Roboto','sans-serif';
-   line-height: 30px;
-   padding-left: 10px;
-}
-
 #user-form-container {
   position: absolute;
   top: 30%;
@@ -29,19 +15,19 @@
   z-index: 2;
   background: rgba(134, 214, 148, 0.7);
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
-  padding: 3em;
+  padding: 1em 3em 3em 3em;
 }
 
-#user-form-container .btn {
+#user-form .btn {
   width: 100%;
 }
 
-#user-form-container #user-location {
+#user-form #user-location {
   width: 100%;
   z-index: 3;
 }
 
-#user-form-container .activity-picker {
+#user-form #sport-filter {
   width: 100%;
 }
 
@@ -49,28 +35,30 @@
   width: 100%;
 }
 
-@media only screen and (min-width: 500px) and (max-width : 767px) {
-  /*#user-form-container {
-    margin: 0 8em;
-  }*/
+@media only screen and (min-width: 768px) {
+  .navbar-default .navbar-nav>li .active {
+    padding-bottom: 10px;
+    border-bottom: 6px solid rgba(125, 202, 92, 1)
+  }
+
+  .navbar #user-form {
+    padding: 0.5em 7em;
+  }
+
+  #user-form #user-location-container {
+    width: 50%;
+  }
+
+  #user-form #activity-picker-container {
+    width: 30%;
+  }
+
 }
 
 @media only screen and (min-width: 768px) and (max-width : 991px) {
   #user-form-container {
     margin: 0 10em;
     top: 35%;
-  }
-
-  #user-form-container #user-location-container {
-    width: 50%;
-  }
-
-  #user-form-container #activity-picker-container {
-    width: 30%;
-  }
-
-  .navbar #user-form {
-    padding: 0.5em 7em;
   }
 }
 
@@ -79,18 +67,6 @@
     margin: 0 20em;
     top: 35%;
   }
-  #user-form-container #user-location-container {
-    width: 50%;
-  }
-
-  #user-form-container #activity-picker-container {
-    width: 30%;
-  }
-
-  .navbar #user-form {
-    padding: 0.5em 7em;
-  }
-
 }
 
 @media only screen and (min-width: 1451px) {
@@ -98,16 +74,4 @@
     margin: 0 35em;
     top: 35%;
   }
-  #user-form-container #user-location-container {
-    width: 50%;
-  }
-
-  #user-form-container #activity-picker-container {
-    width: 30%;
-  }
-
-  .navbar #user-form {
-    padding: 0.5em 7em;
-  }
-
 }
