--- a/styles/modules.css
+++ b/styles/modules.css
@@ -1,7 +1,3 @@
-.navbar {
-  margin-bottom: 0;
-}
-
 .navbar-brand {
   padding: 0 0.5em;
 }
@@ -15,7 +11,7 @@
   z-index: 2;
   background: rgba(134, 214, 148, 0.7);
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
-  padding: 1em 3em 3em 3em;
+  padding: 1em 2em 3em 2em;
 }
 
 #user-form .btn {
@@ -33,6 +29,24 @@
 
 #user-form-button {
   width: 100%;
+}
+
+.back-btn {
+  -webkit-border-radius: 2;
+  -moz-border-radius: 2;
+  border-radius: 2px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  background: #86D694;
+  padding: 0.1em 0.5em 0.2em 0.5em;
+  text-decoration: none;
+}
+
+.back-btn:hover {
+  background: #47c55d;
+  text-decoration: none;
+  color: #ffffff;
 }
 
 @media only screen and (min-width: 768px) {
