--- a/styles/modules.css
+++ b/styles/modules.css
@@ -32,6 +32,10 @@
   border-radius: 50%;
 }
 
+#about-us {
+  margin-top: 1em;
+}
+
 #user-form-container {
   position: absolute;
   top: 30%;
@@ -42,6 +46,11 @@
   background: rgba(134, 214, 148, 0.7);
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
   padding: 1em 2em 3em 2em;
+}
+
+#user-form-container h2 {
+  color: #fff;
+  text-shadow: 2px 4px 3px rgba(0,0,0,0.4);
 }
 
 #user-form .btn {
@@ -79,14 +88,24 @@
   color: #ffffff;
 }
 
+.navbar-default .navbar-nav>li .active {
+  padding-bottom: 10px;
+}
+
+@media only screen and (max-width: 767px) {
+  .navbar-default .navbar-nav>li .active {
+    border-left: 5px solid #86d694;
+    background-color: #fff;
+  }
+}
+
 @media only screen and (min-width: 768px) {
   .navbar-default .navbar-nav>li .active {
-    padding-bottom: 10px;
-    border-bottom: 6px solid rgba(125, 202, 92, 1)
+    border-bottom: 6px solid #86d694;
   }
 
   .navbar #user-form {
-    padding: 0.5em 7em;
+    padding: 0.6em 7em;
   }
 
   #user-form #user-location-container {
