--- a/styles/modules.css
+++ b/styles/modules.css
@@ -92,6 +92,12 @@
   padding-bottom: 10px;
 }
 
+#park-info #lighting .FALSE {
+  background-image: '/img/icon-true.png';
+  background-position: center;
+  background-size: cover;
+}
+
 @media only screen and (max-width: 767px) {
   .navbar-default .navbar-nav>li .active {
     border-left: 5px solid #86d694;
