--- a/styles/layout.css
+++ b/styles/layout.css
@@ -3,7 +3,7 @@
 }
 
 #map {
-  height: 93vh;
+  min-height: 100vh;
   border: 1px;
   margin-left: -15px;
   margin-right: -15px;
@@ -11,12 +11,12 @@
 }
 
 #direction-map {
-  margin: 2.5em;
-  padding: 25% 0;
+  height: 26em;
+  padding-left: 2em;
 }
 
 #park-info {
-  margin-top: 1em;
+  margin-top: 5em;
 }
 
 #park-info h2 {
@@ -34,12 +34,16 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  min-height: 100vh;
+}
+
+#about-app {
+  margin-top: 5em;
 }
 
 #about-app, #about-us {
   background-color: rgba(255, 255, 255, 0.8);
-  margin: auto;
-  padding: 1.5em;
+  padding: 1em;
 }
 
 #about-page h2 {
@@ -57,4 +61,27 @@
 
 #about-page {
   display: none;
+}
+
+#about-page {
+  display: none;
+}
+
+@media only screen and (max-width: 767px) {
+  .navbar-default .navbar-nav>li .active {
+    border-left: 5px solid #86d694;
+    background-color: #fff;
+  }
+
+  #about-us .developer-bio {
+    padding-left: 0;
+    padding-right: 0
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  #about-app, #about-us {
+    padding: 1.5em;
+  }
+
 }
